update - metamagic exploitationOfNaturalEnergy

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -383,7 +383,7 @@
   "anima.ui.mystic.metamagics.combinedMagic.title": "Magia Combinada",
   "anima.ui.mystic.metamagics.persistentEffects.title": "Efectos Persistentes",
   "anima.ui.mystic.metamagics.definedMagicProjection.title": "Proyección Mágica Determinada",
-  "anima.ui.mystic.metamagics.exploitationOfNaturalEnergy.title": "Explotación de la Energía ",
+  "anima.ui.mystic.metamagics.exploitationOfNaturalEnergy.title": "Explotación de la Energía Física",
   "anima.ui.mystic.metamagics.advancedZeonRegeneration.title": "Regeneración Zeónica Avanzada",
   "anima.ui.mystic.metamagics.elevation.title": "Elevación",
   "anima.ui.mystic.metamagics.avatar.title": "Avatar",
